--- a/css/estilos.css
+++ b/css/estilos.css
@@ -60,8 +60,9 @@ header {
 .infoBasicaDoQuizz {
   margin: 0 auto;
   max-width: 600px;
-  height: 1000px;
-  background-color: pink;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .orientacoesDePreenchimento {
   font-size: 23px;
@@ -70,15 +71,39 @@ header {
   margin-bottom: 27px;
   text-align: center;
   width: 100%;
-  background-color: red;
 }
 .conteudoParaPreencher {
   background-color: white;
   width: 100%;
+  margin-bottom: 85px;
   padding: 20px;
   display: flex;
   flex-direction: column;
   gap: 9px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+  border-radius: 5px;
+}
+.caixasDeInput {
+  height: 46px;
+  border-radius: 5px;
+  font-size: 19px;
+  border: 1px solid #d1d1d1;
+  padding-left: 20px;
+}
+.conteudoParaPreencher ::placeholder {
+  color: #bababa;
+  font-style: italic;
+}
+.botaoParaProsseguir {
+  border-radius: 15px;
+  background-color: #ec362d;
+  color: #fff5f4;
+  font-size: 21px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 369px;
+  height: 64px;
 }
 .perguntasDoQuizz {
   width: 200px;
