--- a/css/estilos.css
+++ b/css/estilos.css
@@ -57,22 +57,24 @@ header {
   width: 1051px;
 }
 
-.infoBasicaDoQuizz {
+/* Início das paginas de Criação de quizz */
+/* Primeira Página */
+.info-basica-do-quizz {
   margin: 0 auto;
   max-width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.orientacoesDePreenchimento {
+.orientacoes-de-preenchimento {
   font-size: 23px;
-  font-family: 700;
+  font-weight: 700;
   margin-top: 140px;
   margin-bottom: 27px;
   text-align: center;
   width: 100%;
 }
-.conteudoParaPreencher {
+.conteudo-para-preencher {
   background-color: white;
   width: 100%;
   margin-bottom: 85px;
@@ -83,18 +85,18 @@ header {
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
   border-radius: 5px;
 }
-.caixasDeInput {
+.caixa-de-input {
   height: 46px;
   border-radius: 5px;
   font-size: 19px;
   border: 1px solid #d1d1d1;
   padding-left: 20px;
 }
-.conteudoParaPreencher ::placeholder {
+.conteudo-para-preencher ::placeholder {
   color: #bababa;
   font-style: italic;
 }
-.botaoParaProsseguir {
+.botao-para-prosseguir {
   border-radius: 15px;
   background-color: #ec362d;
   color: #fff5f4;
@@ -105,21 +107,60 @@ header {
   width: 369px;
   height: 64px;
 }
-.perguntasDoQuizz {
-  width: 200px;
-  height: 200px;
-  background-color: pink;
+
+/* Segunda Página */
+.perguntas-do-quizz {
+  margin: 0 auto;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-.niveisDoQuizz {
-  width: 200px;
-  height: 200px;
-  background-color: pink;
+.perguntas-do-quizz .conteudo-para-preencher {
+  font-size: 20px;
+  font-weight: 700;
+  gap: 14px;
+  position: relative;
+  overflow-y: hidden;
 }
-.sucessoDoQuizz {
-  width: 200px;
-  height: 200px;
-  background-color: pink;
+.perguntas-do-quizz p {
+  margin-top: 14px;
+  margin-bottom: 10px;
 }
+.perguntas-do-quizz p:first-of-type {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.perguntas-do-quizz ion-icon {
+  font-size: 30px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+.colapsed {
+  height: 74px;
+}
+/* Tecrceira Página */
+.niveis-do-quizz {
+  margin: 0 auto;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: yellow;
+}
+
+/* Quarta Página */
+.sucesso-do-quizz {
+  margin: 0 auto;
+  max-width: 600px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: purple;
+}
+/* Fim das paginas de Criação de quizz */
+
 .esconde {
   display: none;
 }
