--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,8 +53,54 @@ header {
 }
 
 .todos-os-quizzes {
-  background: red;
   width: 1051px;
+  margin: 0 auto;
+}
+
+.todos-os-quizzes h1{
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.lista-quizzes{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.quizz{
+    width: 340px;
+    height: 181px;
+    background-color: blue;   
+    border-radius: 5px;
+    margin-top: 12px;
+    overflow: hidden;
+    position: relative;      
+}
+
+.quizz:nth-child(3n+2){
+    margin: 12px 15px 0 15px;
+}
+
+.quizz img{
+    width: 100%;
+    z-index: 1;
+}
+.gradiente{
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0) 0%, rgba(0, 0, 0, 0.5) 65.1%, #000000 100%);
+    z-index: 2;
+}
+.quizz h2{
+    font-size: 19px;
+    color: #FFF;
+    position: absolute;
+    bottom: 15px;
+    left: 10px;
+    z-index: 3;
 }
 
 .infoBasicaDoQuizz {
@@ -96,8 +142,5 @@ header {
   background-color: pink;
 }
 .esconde {
-  display: none;
-}
-.tela-inicial-desktop {
   display: none;
 }
