--- a/css/estilos.css
+++ b/css/estilos.css
@@ -128,7 +128,7 @@ header {
 .conteudo-para-preencher {
   background-color: white;
   width: 100%;
-  margin-bottom: 85px;
+  margin-bottom: 14px;
   padding: 20px;
   display: flex;
   flex-direction: column;
@@ -149,6 +149,7 @@ header {
 }
 .botao-para-prosseguir {
   border-radius: 15px;
+  margin-top: 58px;
   background-color: #ec362d;
   color: #fff5f4;
   font-size: 21px;
@@ -189,6 +190,7 @@ header {
   top: 20px;
   right: 20px;
 }
+
 /* Tecrceira Página */
 .niveis-do-quizz {
   margin: 0 auto;
@@ -196,7 +198,28 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: yellow;
+}
+.niveis-do-quizz .conteudo-para-preencher {
+  font-size: 20px;
+  font-weight: 700;
+  gap: 14px;
+  position: relative;
+  overflow-y: hidden;
+  height: 330px;
+}
+.niveis-do-quizz p {
+  margin-top: 14px;
+  margin-bottom: 10px;
+}
+.niveis-do-quizz p:first-of-type {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+.niveis-do-quizz ion-icon {
+  font-size: 30px;
+  position: absolute;
+  top: 20px;
+  right: 20px;
 }
 
 /* Quarta Página */
@@ -206,12 +229,25 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+.sucesso-do-quizz .conteudo-para-preencher {
+  width: 500px;
+  height: 266px;
   background-color: purple;
 }
+.voltar-para-home {
+  font-size: 21px;
+  color: #818181;
+  margin-top: 9px;
+}
 /* Fim das paginas de Criação de quizz */
+
 .esconde {
   display: none;
 }
 .perguntas-do-quizz .colapsed {
+  height: 74px;
+}
+.niveis-do-quizz .colapsed {
   height: 74px;
 }
