--- a/css/estilos.css
+++ b/css/estilos.css
@@ -81,8 +81,9 @@ header {
   margin: 12px 15px 0 15px;
 }
 
-.quizz img {
+.quizz img{
   width: 100%;
+  height: 100%;
   z-index: 1;
 }
 .gradiente {
@@ -95,18 +96,160 @@ header {
     180deg,
     rgba(255, 255, 255, 0) 0%,
     rgba(0, 0, 0, 0.5) 65.1%,
-    #000000 100%
-  );
+    #000000 100%);
   z-index: 2;
 }
 .quizz h2 {
   font-size: 19px;
+  width: 80%;
+  word-break: break-word;
   color: #fff;
   position: absolute;
   bottom: 15px;
   left: 10px;
   z-index: 3;
 }
+
+/*Pagina de resolver quizz criado */
+ .tela-de-quizz{
+   margin-top: 69px;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   
+ }
+
+ .titulo-quizz{
+   position: relative;
+   height: 227px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   overflow: hidden;
+ }
+ .titulo-quizz img{
+   width: 100%;
+ }
+
+ .titulo-quizz h2{
+   position: absolute;
+   font-size: 39px;
+   color: #FFF;
+ }
+
+ .caixa-de-questao{
+   width: 759px;
+   height: 676px;
+   margin: 42px 0 0 0 ;
+   background: #fff;
+   box-sizing: border-box;
+   padding: 27px 35px;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+   flex-wrap: wrap;
+ }
+
+ .titulo-da-questao{
+   height: 138px;
+   background: blue;
+   display: flex;
+   margin-bottom: 20px;
+   justify-content: center;
+   align-items: center;
+   font-size: 23px;
+   color:#FFF;
+ }
+
+ .respostas{
+   width: 100%;
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+
+ }
+ .opcao-resposta{
+   width: 330px;
+ }
+ .opcao-resposta img{
+   width: 100%;
+   height: 175px;
+   margin-bottom: 10px;
+ }
+
+ .opcao-resposta p{
+   font-size: 20px;
+   font-weight: 700;
+   margin-bottom:25px;
+ }
+
+ .caixa-de-resultado{
+   width: 759px;
+   height: 430px;
+   background: #FFF;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
+   margin: 44px auto ;
+   
+   padding: 18px;
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+ }
+
+ .titulo-resultado{
+   width: 100%;
+   background:red;
+   height: 99px;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   color: #FFF;
+   font-weight: 700;
+   font-size: 23px;
+ }
+
+ .texto-resultado{
+   width: 340px;
+   word-break: break-all;
+   font-size: 19px;
+   font-weight: 700;
+   line-height: 25px;
+ }
+ .imagem-resultado{
+   width: 360px;
+   height: 250px;
+ }
+
+ .imagem-resultado img{
+  width: 100%;
+  height: 100%;
+}
+
+.reiniciar-quizz{
+  width: 260px;
+  height: 52px;
+  border: none;
+  outline: none;
+  background: #EC362D;
+  border-radius: 15px;
+  font-weight: 400;
+  font-size: 21px;
+  color: #FFF;
+  margin-bottom: 15px;
+}
+
+.voltar-home{
+  font-size: 21px;
+  color: #818181;
+  background: none;
+  border: none;
+  outline: none;
+}
+
+
+
+
+
+
+
 
 /* Início das paginas de Criação de quizz */
 /* Primeira Página */
