--- a/css/estilos.css
+++ b/css/estilos.css
@@ -121,6 +121,7 @@ header {
 
  .titulo-quizz{
    position: relative;
+   width: 100%;
    height: 227px;
    display: flex;
    justify-content: center;
