--- a/css/estilos.css
+++ b/css/estilos.css
@@ -136,6 +136,7 @@ header {
    position: absolute;
    font-size: 39px;
    color: #FFF;
+   z-index:3;
  }
 
  .caixa-de-questao{
@@ -213,6 +214,22 @@ header {
    font-size: 19px;
    font-weight: 700;
    line-height: 25px;
+ }
+
+ .correta{
+   color: #009C22;
+ }
+
+ .errada{
+   color: #FF4B4B;
+ }
+
+ .ocultar-cor{
+   color: #000;
+ }
+
+ .nao-escolhida{
+   opacity: 0.3;
  }
  .imagem-resultado{
    width: 360px;
