--- a/css/estilos.css
+++ b/css/estilos.css
@@ -387,6 +387,39 @@ header {
   height: 266px;
   padding: 0;
   background-color: purple;
+  position: relative;
+}
+.sucesso-do-quizz img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.sucesso-do-quizz .nomeDoQuiz {
+  position: absolute;
+  bottom: 20px;
+  left: 0;
+  font-size: 23px;
+  padding-left: 20px;
+  padding-right: 20px;
+  line-height: 27px;
+  color: white;
+  z-index: 3;
+}
+.sucesso-do-quizz .gradiente-titulo {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(0, 0, 0, 0.5) 65.1%,
+    #000000 100%
+  );
+  z-index: 2;
 }
 .voltar-para-home {
   font-size: 21px;
@@ -397,6 +430,7 @@ header {
   color: red;
   margin-bottom: 5px;
 }
+
 /* Fim das paginas de Criação de quizz */
 
 .esconde {
