--- a/css/estilos_mobile.css
+++ b/css/estilos_mobile.css
@@ -1,4 +1,85 @@
 @media (max-width: 1100px) {
+  .tela-inicial-desktop{
+    width: 100%;
+    padding: 0 18px;
+  }
+  .criar-quizz{
+    width: 100%;
+    margin: 107px 0 ;
+  }
+
+  .todos-os-quizzes{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 50px;
+  }
+  .todos-os-quizzes h1{
+    width: 340px;
+  }
+  .lista-quizzes{
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+  }
+  .quizz:nth-child(3n + 2) {
+    margin: 12px 0 0 0;
+  }
+
+  .tela-de-quizz{
+    width: 100%;
+    padding-bottom:50px;
+  }
+
+  .titulo-quizz{
+    height: 142px;
+  }
+  .titulo-quizz h2{
+    font-size: 19px;
+  }
+
+  .caixa-de-questao{
+    width: 375px;
+    height: auto;
+    margin-top: 24px;
+    padding: 18px 18px ;
+  }
+
+  .opcao-resposta{
+    width: 163px;
+  }
+  .opcao-resposta img{
+    width: 100%;
+    height: 113px;
+    margin-bottom: 5px;
+  }
+  .opcao-resposta p{
+    font-size: 13px;
+    margin-bottom: 13px;
+  }
+
+  .titulo-da-questao{
+    height: 89px;
+    box-sizing: border-box;
+    padding: 0 10px;
+    text-align: center;
+    font-size: 19px
+  }
+
+  .caixa-de-resultado{
+    width: 375px ;
+    height: auto;
+    flex-direction: column;
+    justify-content: none;
+  }
+
+  .imagem-resultado{
+    margin: 9px 0;
+    width: 340px;
+    height: 255px ;
+  }
+
   /*CRIAÇÃO DE QUIZZ*/
   .info-basica-do-quizz {
     max-width: 375px;
