--- a/css/estilos_mobile.css
+++ b/css/estilos_mobile.css
@@ -1,24 +1,24 @@
 @media (max-width: 1100px) {
-  .tela-inicial-desktop{
+  .tela-inicial-desktop {
     width: 100%;
     padding: 0 18px;
   }
-  .criar-quizz{
+  .criar-quizz {
     width: 100%;
-    margin: 107px 0 ;
+    margin: 107px 0;
   }
 
-  .todos-os-quizzes{
+  .todos-os-quizzes {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-bottom: 50px;
   }
-  .todos-os-quizzes h1{
+  .todos-os-quizzes h1 {
     width: 340px;
   }
-  .lista-quizzes{
+  .lista-quizzes {
     width: 100%;
     flex-direction: column;
     align-items: center;
@@ -27,57 +27,57 @@
     margin: 12px 0 0 0;
   }
 
-  .tela-de-quizz{
+  .tela-de-quizz {
     width: 100%;
-    padding-bottom:50px;
+    padding-bottom: 50px;
   }
 
-  .titulo-quizz{
+  .titulo-quizz {
     height: 142px;
   }
-  .titulo-quizz h2{
+  .titulo-quizz h2 {
     font-size: 19px;
   }
 
-  .caixa-de-questao{
+  .caixa-de-questao {
     width: 375px;
     height: auto;
     margin-top: 24px;
-    padding: 18px 18px ;
+    padding: 18px 18px;
   }
 
-  .opcao-resposta{
+  .opcao-resposta {
     width: 163px;
   }
-  .opcao-resposta img{
+  .opcao-resposta img {
     width: 100%;
     height: 113px;
     margin-bottom: 5px;
   }
-  .opcao-resposta p{
+  .opcao-resposta p {
     font-size: 13px;
     margin-bottom: 13px;
   }
 
-  .titulo-da-questao{
+  .titulo-da-questao {
     height: 89px;
     box-sizing: border-box;
     padding: 0 10px;
     text-align: center;
-    font-size: 19px
+    font-size: 19px;
   }
 
-  .caixa-de-resultado{
-    width: 375px ;
+  .caixa-de-resultado {
+    width: 375px;
     height: auto;
     flex-direction: column;
     justify-content: none;
   }
 
-  .imagem-resultado{
+  .imagem-resultado {
     margin: 9px 0;
     width: 340px;
-    height: 255px ;
+    height: 255px;
   }
 
   /*CRIAÇÃO DE QUIZZ*/
@@ -86,6 +86,8 @@
   }
   .adicionar-quizz {
     justify-content: space-between;
+    max-width: 340px;
+    margin: 0 auto;
   }
   .quizzes-do-usuario {
     margin-top: 111px;
