--- a/css/estilos.css
+++ b/css/estilos.css
@@ -153,7 +153,7 @@ header {
 
 .caixa-de-questao {
   width: 759px;
-  height: 676px;
+  height: auto;
   margin: 42px 0 0 0;
   background: #fff;
   box-sizing: border-box;
@@ -169,6 +169,7 @@ header {
   margin-bottom: 20px;
   justify-content: center;
   align-items: center;
+  text-align: center;
   font-size: 23px;
   color: #fff;
 }
@@ -192,6 +193,7 @@ header {
   font-size: 20px;
   font-weight: 700;
   margin-bottom: 25px;
+  word-break: break-all;
 }
 
 .caixa-de-resultado {
