Consegui fazer um pouco da edicao e delete, mas deve estar cheio de bugs

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -124,6 +124,29 @@ header {
   z-index: 3;
 }
 
+.meu-quizz {
+  position: relative;
+}
+.editar-remover {
+  position: absolute;
+  right: 0;
+  top: 10%;
+  width: 40px;
+  height: 80px;
+  background-color: #ec362d;
+  border-top-left-radius: 10px;
+  border-bottom-left-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  z-index: 100;
+}
+.editar-remover ion-icon {
+  color: white;
+  font-size: 20px;
+}
+
 .tela-inicial-desktop {
   width: 100%;
 }
