--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,6 +3,13 @@ body {
   background-color: #fafafa;
 }
 
+.loading-geral {
+  margin-top: 100px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 header {
   font-size: 37px;
   font-weight: 700;
